--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,15 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "sourceMap": true,
-        "outDir": "./build"
+        "outDir": "./Engine/Build"
     },
     "filesGlob": [
-        "./src/**/*.ts",
-        "./typings/**/*.ts"
+        "./Engine/Source/**/*.ts",
+        "./Engine/Typings/**/*.ts"
     ],
     "files": [
-      
+        "./Engine/Source/Core/Object3D.ts",
+        "./Engine/Source/Wasp.ts",
+        "./Engine/Source/main.ts"
     ]
 }
