--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
         "./Engine/Source/Core/Object3D.ts",
         "./Engine/Source/Math/Euler.ts",
         "./Engine/Source/Math/Vector2.ts",
+        "./Engine/Source/Math/Vector3.ts",
         "./Engine/Source/Wasp.ts",
         "./Engine/Source/main.ts"
     ]
