--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,15 @@
     "files": [
         "./Engine/Source/Core/Object3D.ts",
         "./Engine/Source/Math/Euler.ts",
+        "./Engine/Source/Math/MathUtil.ts",
+        "./Engine/Source/Math/Matrix3.ts",
+        "./Engine/Source/Math/Matrix4.ts",
+        "./Engine/Source/Math/Quaternion.ts",
         "./Engine/Source/Math/Vector2.ts",
         "./Engine/Source/Math/Vector3.ts",
+        "./Engine/Source/Renderer/WebGLRenderTargetCube.ts",
+        "./Engine/Source/Renderer/WebGLRenderer.ts",
+        "./Engine/Source/Renderer/WebGLRendererTarget.ts",
         "./Engine/Source/Wasp.ts",
         "./Engine/Source/main.ts"
     ]
