--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
         "./Engine/Source/Editor/globals.ts",
         "./Engine/Source/Editor/Modules/AnimEditor/AnimEditor.ts",
         "./Engine/Source/Editor/Modules/AnimEditor/AnimEditorView.ts",
+        "./Engine/Source/Editor/Modules/HeroEditor/HeroEditorView.ts",
         "./Engine/Source/Editor/tsd.d.ts",
         "./Engine/Source/Editor/Utils/fsUtil.ts",
         "./Engine/Source/Editor/WaspEditor.ts",
