--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,41 +19,42 @@
         "./Engine/Typings/**/*.ts"
     ],
     "files": [
-        "./Engine/Source/Editor/Atom/atomUtils.ts",
-        "./Engine/Source/Editor/Atom/views/view.ts",
-        "./Engine/Source/Editor/config.ts",
-        "./Engine/Source/Editor/globals.ts",
-        "./Engine/Source/Editor/Modules/AnimEditor/AnimEditor.ts",
-        "./Engine/Source/Editor/Modules/AnimEditor/AnimEditorView.ts",
-        "./Engine/Source/Editor/Modules/HeroEditor/HeroEditorView.ts",
-        "./Engine/Source/Editor/tsd.d.ts",
-        "./Engine/Source/Editor/Utils/fsUtil.ts",
-        "./Engine/Source/Editor/WaspEditor.ts",
-        "./Engine/Source/main.ts",
-        "./Engine/Source/Runtime/Cameras/Camera.ts",
-        "./Engine/Source/Runtime/Cameras/PerspectiveCamera.ts",
-        "./Engine/Source/Runtime/Core/Channels.ts",
-        "./Engine/Source/Runtime/Core/EventDispatcher.ts",
-        "./Engine/Source/Runtime/Core/Geometry.ts",
-        "./Engine/Source/Runtime/Core/Object3D.ts",
-        "./Engine/Source/Runtime/Extras/Geometries/BoxGeometry.ts",
-        "./Engine/Source/Runtime/Materials/Material.ts",
-        "./Engine/Source/Runtime/Materials/MeshBasicMaterial.ts",
-        "./Engine/Source/Runtime/Math/Color.ts",
-        "./Engine/Source/Runtime/Math/Euler.ts",
-        "./Engine/Source/Runtime/Math/Frustum.ts",
-        "./Engine/Source/Runtime/Math/MathUtil.ts",
-        "./Engine/Source/Runtime/Math/Matrix3.ts",
-        "./Engine/Source/Runtime/Math/Matrix4.ts",
-        "./Engine/Source/Runtime/Math/Quaternion.ts",
-        "./Engine/Source/Runtime/Math/Vector2.ts",
-        "./Engine/Source/Runtime/Math/Vector3.ts",
-        "./Engine/Source/Runtime/Math/Vector4.ts",
-        "./Engine/Source/Runtime/Objects/Mesh.ts",
-        "./Engine/Source/Runtime/Renderers/WebGLRenderer.ts",
-        "./Engine/Source/Runtime/Renderers/WebGLRendererTarget.ts",
-        "./Engine/Source/Runtime/Renderers/WebGLRenderTargetCube.ts",
-        "./Engine/Source/Runtime/Scenes/Scene.ts",
-        "./Engine/Source/Wasp.ts"
-    ]
+        "Engine/Source/Editor/atom/atomUtils.ts",
+        "Engine/Source/Editor/atom/views/view.ts",
+        "Engine/Source/Editor/config.ts",
+        "Engine/Source/Editor/globals.ts",
+        "Engine/Source/Editor/Modules/AnimEditor/AnimEditor.ts",
+        "Engine/Source/Editor/Modules/AnimEditor/AnimEditorView.ts",
+        "Engine/Source/Editor/Modules/HeroEditor/HeroEditorView.ts",
+        "Engine/Source/Editor/tsd.d.ts",
+        "Engine/Source/Editor/utils/fsUtil.ts",
+        "Engine/Source/Editor/WaspEditor.ts",
+        "Engine/Source/main.ts",
+        "Engine/Source/Runtime/Cameras/Camera.ts",
+        "Engine/Source/Runtime/Cameras/PerspectiveCamera.ts",
+        "Engine/Source/Runtime/Core/Channels.ts",
+        "Engine/Source/Runtime/Core/EventDispatcher.ts",
+        "Engine/Source/Runtime/Core/Geometry.ts",
+        "Engine/Source/Runtime/Core/Object3d.ts",
+        "Engine/Source/Runtime/Extras/Geometries/BoxGeometry.ts",
+        "Engine/Source/Runtime/Materials/Material.ts",
+        "Engine/Source/Runtime/Materials/MeshBasicMaterial.ts",
+        "Engine/Source/Runtime/Math/Color.ts",
+        "Engine/Source/Runtime/Math/Euler.ts",
+        "Engine/Source/Runtime/Math/Frustum.ts",
+        "Engine/Source/Runtime/Math/MathUtil.ts",
+        "Engine/Source/Runtime/Math/Matrix3.ts",
+        "Engine/Source/Runtime/Math/Matrix4.ts",
+        "Engine/Source/Runtime/Math/Quaternion.ts",
+        "Engine/Source/Runtime/Math/Vector2.ts",
+        "Engine/Source/Runtime/Math/Vector3.ts",
+        "Engine/Source/Runtime/Math/Vector4.ts",
+        "Engine/Source/Runtime/Objects/Mesh.ts",
+        "Engine/Source/Runtime/Renderers/WebGLRenderer.ts",
+        "Engine/Source/Runtime/Renderers/WebGLRendererTarget.ts",
+        "Engine/Source/Runtime/Renderers/WebGLRenderTargetCube.ts",
+        "Engine/Source/Runtime/Scenes/Scene.ts",
+        "Engine/Source/Wasp.ts"
+    ],
+    "exclude": []
 }
