--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,42 +19,56 @@
         "./Engine/Typings/**/*.ts"
     ],
     "files": [
-        "Engine/Source/Editor/atom/atomUtils.ts",
-        "Engine/Source/Editor/atom/views/view.ts",
-        "Engine/Source/Editor/config.ts",
-        "Engine/Source/Editor/globals.ts",
-        "Engine/Source/Editor/Modules/AnimEditor/AnimEditor.ts",
-        "Engine/Source/Editor/Modules/AnimEditor/AnimEditorView.ts",
-        "Engine/Source/Editor/Modules/HeroEditor/HeroEditorView.ts",
-        "Engine/Source/Editor/tsd.d.ts",
-        "Engine/Source/Editor/utils/fsUtil.ts",
-        "Engine/Source/Editor/WaspEditor.ts",
-        "Engine/Source/main.ts",
-        "Engine/Source/Runtime/Cameras/Camera.ts",
-        "Engine/Source/Runtime/Cameras/PerspectiveCamera.ts",
-        "Engine/Source/Runtime/Core/Channels.ts",
-        "Engine/Source/Runtime/Core/EventDispatcher.ts",
-        "Engine/Source/Runtime/Core/Geometry.ts",
-        "Engine/Source/Runtime/Core/Object3d.ts",
-        "Engine/Source/Runtime/Extras/Geometries/BoxGeometry.ts",
-        "Engine/Source/Runtime/Materials/Material.ts",
-        "Engine/Source/Runtime/Materials/MeshBasicMaterial.ts",
-        "Engine/Source/Runtime/Math/Color.ts",
-        "Engine/Source/Runtime/Math/Euler.ts",
-        "Engine/Source/Runtime/Math/Frustum.ts",
-        "Engine/Source/Runtime/Math/MathUtil.ts",
-        "Engine/Source/Runtime/Math/Matrix3.ts",
-        "Engine/Source/Runtime/Math/Matrix4.ts",
-        "Engine/Source/Runtime/Math/Quaternion.ts",
-        "Engine/Source/Runtime/Math/Vector2.ts",
-        "Engine/Source/Runtime/Math/Vector3.ts",
-        "Engine/Source/Runtime/Math/Vector4.ts",
-        "Engine/Source/Runtime/Objects/Mesh.ts",
-        "Engine/Source/Runtime/Renderers/WebGLRenderer.ts",
-        "Engine/Source/Runtime/Renderers/WebGLRendererTarget.ts",
-        "Engine/Source/Runtime/Renderers/WebGLRenderTargetCube.ts",
-        "Engine/Source/Runtime/Scenes/Scene.ts",
-        "Engine/Source/Wasp.ts"
+        "./Engine/Source/Editor/atom/atomUtils.ts",
+        "./Engine/Source/Editor/atom/views/view.ts",
+        "./Engine/Source/Editor/config.ts",
+        "./Engine/Source/Editor/globals.ts",
+        "./Engine/Source/Editor/Modules/AnimEditor/AnimEditor.ts",
+        "./Engine/Source/Editor/Modules/AnimEditor/AnimEditorView.ts",
+        "./Engine/Source/Editor/Modules/HeroEditor/HeroEditorView.ts",
+        "./Engine/Source/Editor/tsd.d.ts",
+        "./Engine/Source/Editor/utils/fsUtil.ts",
+        "./Engine/Source/Editor/WaspEditor.ts",
+        "./Engine/Source/main.ts",
+        "./Engine/Source/Runtime/Audio/Audio.ts",
+        "./Engine/Source/Runtime/RenderCore/RenderCore.ts",
+        "./Engine/Source/Runtime/Renderer/Cameras/Camera.ts",
+        "./Engine/Source/Runtime/Renderer/Cameras/PerspectiveCamera.ts",
+        "./Engine/Source/Runtime/Renderer/Core/Channels.ts",
+        "./Engine/Source/Runtime/Renderer/Core/EventDispatcher.ts",
+        "./Engine/Source/Runtime/Renderer/Core/Geometry.ts",
+        "./Engine/Source/Runtime/Renderer/Core/Object3d.ts",
+        "./Engine/Source/Runtime/Renderer/Extras/Geometries/BoxGeometry.ts",
+        "./Engine/Source/Runtime/Renderer/Materials/Material.ts",
+        "./Engine/Source/Runtime/Renderer/Materials/MeshBasicMaterial.ts",
+        "./Engine/Source/Runtime/Renderer/Math/Color.ts",
+        "./Engine/Source/Runtime/Renderer/Math/Euler.ts",
+        "./Engine/Source/Runtime/Renderer/Math/Frustum.ts",
+        "./Engine/Source/Runtime/Renderer/Math/MathUtil.ts",
+        "./Engine/Source/Runtime/Renderer/Math/Matrix3.ts",
+        "./Engine/Source/Runtime/Renderer/Math/Matrix4.ts",
+        "./Engine/Source/Runtime/Renderer/Math/Quaternion.ts",
+        "./Engine/Source/Runtime/Renderer/Math/Vector2.ts",
+        "./Engine/Source/Runtime/Renderer/Math/Vector3.ts",
+        "./Engine/Source/Runtime/Renderer/Math/Vector4.ts",
+        "./Engine/Source/Runtime/Renderer/Objects/Mesh.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLBufferRenderer.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLCapabilities.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLExtensions.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLGeometries.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLIndexedBufferRenderer.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLObjects.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLProgram.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLPrograms.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLProperties.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLShader.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLShadowMap.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLState.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGLRenderer.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGLRendererTarget.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGLRenderTargetCube.ts",
+        "./Engine/Source/Runtime/Renderer/Scenes/Scene.ts",
+        "./Engine/Source/Wasp.ts"
     ],
     "exclude": []
 }
