--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "es6-module-loader": "^0.16.6",
     "radium": "^0.14.3",
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2",
     "systemjs": "^0.16.11",
     "wozllajs": "^2.0.0"
   }
