--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,9 +25,13 @@
         "./Engine/Source/Editor/globals.ts",
         "./Engine/Source/Editor/Modules/AnimEditor/AnimEditor.ts",
         "./Engine/Source/Editor/Modules/AnimEditor/AnimEditorView.ts",
+        "./Engine/Source/Editor/Modules/AudioEditor/analyser.ts",
+        "./Engine/Source/Editor/Modules/AudioEditor/frequency.ts",
+        "./Engine/Source/Editor/Modules/AudioEditor/play.ts",
         "./Engine/Source/Editor/Modules/HeroEditor/HeroEditorView.ts",
         "./Engine/Source/Editor/Modules/UIEditor/UIEditorView.ts",
         "./Engine/Source/Editor/tsd.d.ts",
+        "./Engine/Source/Editor/utils/dir2json.ts",
         "./Engine/Source/Editor/utils/fsUtil.ts",
         "./Engine/Source/Editor/WaspEditor.ts",
         "./Engine/Source/Runtime/Audio/Audio.ts",
