--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "sourceMap": true,
+        "jsx": "react",
         "outDir": "./Engine/Build"
     },
     "filesGlob": [
