--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
         "./Engine/Source/Editor/Modules/AudioEditor/analyser.ts",
         "./Engine/Source/Editor/Modules/AudioEditor/frequency.ts",
         "./Engine/Source/Editor/Modules/AudioEditor/play.ts",
+        "./Engine/Source/Editor/Modules/AudioEditor/play&stop.ts",
         "./Engine/Source/Editor/Modules/HeroEditor/HeroEditorView.ts",
         "./Engine/Source/Editor/Modules/UIEditor/UIEditorView.ts",
         "./Engine/Source/Editor/tsd.d.ts",
@@ -58,6 +59,8 @@
         "./Engine/Source/Runtime/Renderer/Math/Vector3.ts",
         "./Engine/Source/Runtime/Renderer/Math/Vector4.ts",
         "./Engine/Source/Runtime/Renderer/Objects/Mesh.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/Plugins/LensFlarePlugin.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WebGL/Plugins/SpritePlugin.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLBufferRenderer.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLCapabilities.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLExtensions.ts",
