--- a/tsconfig.json
+++ b/tsconfig.json
@@ -77,6 +77,7 @@
         "./Engine/Source/Runtime/Renderer/Renderers/WebGLRendererTarget.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGLRenderTargetCube.ts",
         "./Engine/Source/Runtime/Renderer/Scenes/Scene.ts",
+        "./Engine/Source/Runtime/Renderer/THREE.ts",
         "./Engine/Source/Test/AudioTest.ts",
         "./Engine/Source/Test/main.ts",
         "./Engine/Source/Tester/Tester.ts",
