fix compile error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,6 +49,8 @@
         "./Engine/Source/Runtime/Renderer/Lights/Light.ts",
         "./Engine/Source/Runtime/Renderer/Materials/Material.ts",
         "./Engine/Source/Runtime/Renderer/Materials/MeshBasicMaterial.ts",
+        "./Engine/Source/Runtime/Renderer/Materials/MeshFaceMaterial.ts",
+        "./Engine/Source/Runtime/Renderer/Materials/MultiMaterial.ts",
         "./Engine/Source/Runtime/Renderer/Math/Color.ts",
         "./Engine/Source/Runtime/Renderer/Math/Euler.ts",
         "./Engine/Source/Runtime/Renderer/Math/Frustum.ts",
@@ -59,9 +61,15 @@
         "./Engine/Source/Runtime/Renderer/Math/Vector2.ts",
         "./Engine/Source/Runtime/Renderer/Math/Vector3.ts",
         "./Engine/Source/Runtime/Renderer/Math/Vector4.ts",
+        "./Engine/Source/Runtime/Renderer/Objects/ImmediateRenderObject.ts",
+        "./Engine/Source/Runtime/Renderer/Objects/LensFlare.ts",
+        "./Engine/Source/Runtime/Renderer/Objects/Line.ts",
         "./Engine/Source/Runtime/Renderer/Objects/Mesh.ts",
         "./Engine/Source/Runtime/Renderer/Objects/Particle.ts",
+        "./Engine/Source/Runtime/Renderer/Objects/Points.ts",
+        "./Engine/Source/Runtime/Renderer/Objects/SkinnedMesh.ts",
         "./Engine/Source/Runtime/Renderer/Objects/Sprite.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/BlendingMode.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGL/Plugins/LensFlarePlugin.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGL/Plugins/SpritePlugin.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLBufferRenderer.ts",
