WebGL/WebGLPrograms.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,11 @@
         "./Engine/Source/Runtime/Renderer/Core/Geometry.ts",
         "./Engine/Source/Runtime/Renderer/Core/Object3D.ts",
         "./Engine/Source/Runtime/Renderer/Extras/Geometries/BoxGeometry.ts",
+        "./Engine/Source/Runtime/Renderer/Lights/DirectionalLight.ts",
+        "./Engine/Source/Runtime/Renderer/Lights/HemisphereLight.ts",
         "./Engine/Source/Runtime/Renderer/Lights/Light.ts",
+        "./Engine/Source/Runtime/Renderer/Lights/PointLight.ts",
+        "./Engine/Source/Runtime/Renderer/Lights/SpotLight.ts",
         "./Engine/Source/Runtime/Renderer/Materials/Material.ts",
         "./Engine/Source/Runtime/Renderer/Materials/MeshBasicMaterial.ts",
         "./Engine/Source/Runtime/Renderer/Materials/MeshFaceMaterial.ts",
@@ -98,6 +102,7 @@
         "./Engine/Source/Runtime/Renderer/Renderers/WebGLRenderer.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGLRendererTarget.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGLRenderTargetCube.ts",
+        "./Engine/Source/Runtime/Renderer/Scenes/FogExp2.ts",
         "./Engine/Source/Runtime/Renderer/Scenes/Scene.ts",
         "./Engine/Source/Runtime/Renderer/Textures/Texture.ts",
         "./Engine/Source/Test/AudioTest.ts",
