--- a/tsconfig.json
+++ b/tsconfig.json
@@ -85,6 +85,10 @@
         "./Engine/Source/Runtime/Renderer/Renderers/Const/ShadingSideType.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/Const/ShadingType.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/Const/TextureOperation.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/Shaders/ShaderChunk.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/Shaders/ShaderLib.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/Shaders/UniformsLib.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/Shaders/UniformsUtils.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGL/Plugins/LensFlarePlugin.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGL/Plugins/SpritePlugin.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WebGLBufferRenderer.ts",
