--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,11 +44,13 @@
         "Engine/Source/Runtime/RenderCore/RenderCore.ts",
         "Engine/Source/Runtime/Renderer/Cameras/Camera.ts",
         "Engine/Source/Runtime/Renderer/Cameras/PerspectiveCamera.ts",
+        "Engine/Source/Runtime/Renderer/Core/BufferAttribute.ts",
         "Engine/Source/Runtime/Renderer/Core/BufferGeometry.ts",
         "Engine/Source/Runtime/Renderer/Core/Channels.ts",
         "Engine/Source/Runtime/Renderer/Core/EventDispatcher.ts",
         "Engine/Source/Runtime/Renderer/Core/Face3.ts",
         "Engine/Source/Runtime/Renderer/Core/Geometry.ts",
+        "Engine/Source/Runtime/Renderer/Core/InterleavedBufferAttribute.ts",
         "Engine/Source/Runtime/Renderer/Core/Object3d.ts",
         "Engine/Source/Runtime/Renderer/Extras/Geometries/BoxGeometry.ts",
         "Engine/Source/Runtime/Renderer/Lights/DirectionalLight.ts",
