--- a/tsconfig.json
+++ b/tsconfig.json
@@ -131,10 +131,14 @@
         "./Engine/Source/Runtime/Renderer/Scenes/FogExp2.ts",
         "./Engine/Source/Runtime/Renderer/Scenes/Scene.ts",
         "./Engine/Source/Runtime/Renderer/Textures/Texture.ts",
+        "./Engine/Source/Runtime/Wasp.ts",
         "./Engine/Source/Test/AudioTest.ts",
         "./Engine/Source/Test/main.ts",
         "./Engine/Source/Test/ProfilerTest.ts",
         "./Engine/Source/Tester/CityData.ts",
+        "./Engine/Source/Tester/drawPoint.ts",
+        "./Engine/Source/Tester/Flag.ts",
+        "./Engine/Source/Tester/MainPlayer.ts",
         "./Engine/Source/Tester/MapTest.ts",
         "./Engine/Source/Tester/ScollerRectTest.ts",
         "./Engine/Source/Tester/Tester.ts",
