--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install":"",
+    "server":"node ./Engine/Build/Developer/Servers/index"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,8 @@
     "react-dom": "^0.14.2",
     "system-wasp-shader": "^0.1.0",
     "systemjs": "^0.16.11",
-    "wozllajs": "^2.0.0"
+    "wozllajs": "^2.0.0",
+    "wasp-socket":"^1.3.7",
+    "wasp-socket-client":"^1.0.0"
   }
 }
