--- a/tsconfig.json
+++ b/tsconfig.json
@@ -138,7 +138,9 @@
         "./Engine/Source/Runtime/Renderer/Scenes/Scene.ts",
         "./Engine/Source/Runtime/Renderer/Textures/Texture.ts",
         "./Engine/Source/Test/AudioTest.ts",
+        "./Engine/Source/Test/GestureTest.ts",
         "./Engine/Source/Test/main.ts",
+        "./Engine/Source/Test/PerformanceTest.ts",
         "./Engine/Source/Test/ProfilerTest.ts",
         "./Engine/Source/Test/WaspSocketClientTest.ts",
         "./Engine/Source/Tester/CityData.ts",
