--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "",
     "install": "",
     "server": "node ./Engine/Build/Developer/Servers/index"
   },
@@ -35,5 +36,12 @@
     "wasp-socket": "^1.3.7",
     "wasp-socket-client": "^1.0.0",
     "wozllajs": "^2.0.0"
+  },
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4",
+    "css-loader": "^0.23.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.9"
   }
 }
