--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "start": "",
     "install": "",
     "server": "node ./Engine/Build/Developer/Servers/index",
-    "watch":"gulp watch",
-    "publish":"webpack"
+    "watch": "gulp watch",
+    "publish": "webpack"
   },
   "repository": {
     "type": "git",
@@ -43,6 +43,7 @@
   "devDependencies": {
     "chai": "^3.4.1",
     "css-loader": "^0.23.0",
+    "dts-generator": "^1.6.2",
     "gulp": "^3.9.0",
     "mocha": "^2.3.4",
     "style-loader": "^0.13.0",
