--- a/tsconfig.json
+++ b/tsconfig.json
@@ -140,6 +140,9 @@
         "./Engine/Source/Runtime/Renderer/Scenes/FogExp2.ts",
         "./Engine/Source/Runtime/Renderer/Scenes/Scene.ts",
         "./Engine/Source/Runtime/Renderer/Textures/Texture.ts",
+        "./Engine/Source/Sample/LearnWebGL/Lesson1.ts",
+        "./Engine/Source/Sample/WebGLBook/HelloPoint.ts",
+        "./Engine/Source/Sample/WebGLBook/utils.ts",
         "./Engine/Source/Test/AudioTest.ts",
         "./Engine/Source/Test/GestureTest.ts",
         "./Engine/Source/Test/main.ts",
@@ -149,6 +152,7 @@
         "./Engine/Source/Test/PerformanceTest.ts",
         "./Engine/Source/Test/ProfilerTest.ts",
         "./Engine/Source/Test/WaspSocketClientTest.ts",
+        "./Engine/Source/Tester/BeHurt.ts",
         "./Engine/Source/Tester/CityData.ts",
         "./Engine/Source/Tester/drawPoint.ts",
         "./Engine/Source/Tester/Flag.ts",
