--- a/tsconfig.json
+++ b/tsconfig.json
@@ -120,6 +120,7 @@
         "./Engine/Source/Runtime/Renderer/Renderers/Shaders/ShaderLib.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/Shaders/UniformsLib.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/Shaders/UniformsUtils.ts",
+        "./Engine/Source/Runtime/Renderer/Renderers/WaspRenderingContext.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGL/Plugins/LensFlarePlugin.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGL/Plugins/SpritePlugin.ts",
         "./Engine/Source/Runtime/Renderer/Renderers/WebGL/WaspProgram.ts",
@@ -145,6 +146,7 @@
         "./Engine/Source/Sample/WebGLBook/utils.ts",
         "./Engine/Source/Test/AudioTest.ts",
         "./Engine/Source/Test/GestureTest.ts",
+        "./Engine/Source/Test/main.bak.ts",
         "./Engine/Source/Test/main.ts",
         "./Engine/Source/Test/Math/hello.ts",
         "./Engine/Source/Test/Math/test.ts",
