--- a/tsconfig.json
+++ b/tsconfig.json
@@ -142,6 +142,12 @@
         "./Engine/Source/Runtime/Renderer/Scenes/Scene.ts",
         "./Engine/Source/Runtime/Renderer/Textures/Texture.ts",
         "./Engine/Source/Sample/LearnWebGL/Lesson1.ts",
+        "./Engine/Source/Sample/RxWorker/RxWorker.ts",
+        "./Engine/Source/Sample/RxWorker/RxWorkerFactory.ts",
+        "./Engine/Source/Sample/RxWorker/Test.bak.ts",
+        "./Engine/Source/Sample/RxWorker/Test.ts",
+        "./Engine/Source/Sample/RxWorker/WebWorker/test.ts",
+        "./Engine/Source/Sample/RxWorker/WebWorker/WaspWorker.ts",
         "./Engine/Source/Sample/WebGLBook/HelloPoint.ts",
         "./Engine/Source/Sample/WebGLBook/utils.ts",
         "./Engine/Source/Test/AudioTest.ts",
@@ -161,6 +167,7 @@
         "./Engine/Source/Tester/MainPlayer.ts",
         "./Engine/Source/Tester/MapTest.ts",
         "./Engine/Source/Tester/ScollerRectTest.ts",
+        "./Engine/Source/Tester/Simple.ts",
         "./Engine/Source/Tester/Tester.ts",
         "./Engine/Source/Wasp.ts",
         "./Engine/Source/Editor/Modules/Status/Report.tsx",
